--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
 #
-# Example .tmux.conf
+# partly taken from "Example .tmux.conf" by Nicholas Marriott. Public domain.
 #
-# By Nicholas Marriott. Public domain.
-#
+
+set-option -g default-shell /bin/zsh
 
 # Some tweaks to the status line
 set -g status-right "%H:%M"
